--- a/erpnext/healthcare/page/medical_record/medical_record.css
+++ b/erpnext/healthcare/page/medical_record/medical_record.css
@@ -58,13 +58,13 @@
 }
 
 #page-medical_record .plot {
-	height: 140px !important;
-	width: 97% !important;
+	height: 140px ;
+	width: 97% ;
 	margin: auto;
 }
 
 #page-medical_record .list-filters {
-	display: none !important;
+	display: none ;
 }
 
 #page-medical_record .octicon-heart {
