[hub] new hub page, client item CUD at hub working

--- a/erpnext/public/less/erpnext.less
+++ b/erpnext/public/less/erpnext.less
@@ -424,3 +424,43 @@ body[data-route="pos"] {
 		cursor: pointer;
 	}
 }
+
+/* hub */
+
+body[data-route="hub"] {
+	.page-head {
+		height: 80px;
+	}
+
+	.page-content {
+		margin-top: 80px;
+	}
+
+	.page-title h1 {
+		margin-bottom: 0px;
+	}
+
+	.account-details {
+		margin-top: 20px;
+	}
+
+	[data-original-title="Search"] {
+		float: right;
+		width: 250px;
+	}
+
+	.banner {
+		height: 150px;
+		background-color: lightgrey;
+	}
+
+	.main-list-section {
+		height: 150px;
+		background-color: lightblue;
+	}
+
+	.side-list-section {
+		height: 150px;
+		background-color: lightcyan;
+	}
+}
