listing, standard rate, local site hack

--- a/erpnext/public/css/erpnext.css
+++ b/erpnext/public/css/erpnext.css
@@ -386,11 +386,46 @@ body[data-route="hub"] .banner {
   height: 150px;
   background-color: lightgrey;
 }
+body[data-route="hub"] .listing-body {
+  margin: 0;
+}
 body[data-route="hub"] .main-list-section {
-  height: 150px;
-  background-color: lightblue;
+  padding: 0;
+  border-right: 1px solid #d1d8dd;
 }
 body[data-route="hub"] .side-list-section {
-  height: 150px;
-  background-color: lightcyan;
+  padding: 0;
+}
+body[data-route="hub"] .item-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px;
+}
+body[data-route="hub"] .item-card {
+  border: 1px solid #d1d8dd;
+  border-radius: 3px;
+  margin: 5px;
+  width: 220px;
+  display: flex;
+}
+body[data-route="hub"] .item-card .image {
+  border-right: 1px solid #d1d8dd;
+}
+body[data-route="hub"] .item-card .image img {
+  height: 90px;
+  width: 90px;
+  padding: 5px;
+}
+body[data-route="hub"] .item-card .content {
+  padding: 10px;
+}
+body[data-route="hub"] .item-card .title {
+  font-weight: bold;
+}
+body[data-route="hub"] .item-card .company {
+  font-size: 12px;
+  margin-bottom: 12px;
+}
+body[data-route="hub"] .item-card .price {
+  font-size: 12px;
 }
