--- a/erpnext/public/less/erpnext.less
+++ b/erpnext/public/less/erpnext.less
@@ -441,10 +441,13 @@ body[data-route="pos"] {
 }
 
 /* hub */
-
-body[data-route="hub"] {
+div[data-page-route="hub"] {
 	.page-head {
 		height: 80px;
+
+		.title-text {
+			cursor: pointer;
+		}
 	}
 
 	.page-content {
@@ -461,13 +464,13 @@ body[data-route="hub"] {
 
 	[data-original-title="Search"] {
 		float: right;
-		width: 250px;
+		width: 220px;
 	}
 
-	.banner {
-		height: 150px;
-		background-color: lightgrey;
-	}
+	// .banner {
+	// 	height: 150px;
+	// 	background-color: lightgrey;
+	// }
 
 	.listing-body {
 		margin: 0;
@@ -482,10 +485,23 @@ body[data-route="hub"] {
 		padding: 0;
 	}
 
+	.item-list-container {
+		padding: 5px;
+	}
+
+	.item-list-header {
+		padding-left: 5px;
+
+		h3 {
+			margin-bottom: 0px;
+			margin-top: 10px;
+			font-weight: normal;
+		}
+	}
+
 	.item-list {
 		display: flex;
 		flex-wrap: wrap;
-		padding: 5px;
 	}
 
 	.item-card {
@@ -520,6 +536,21 @@ body[data-route="hub"] {
 		.price {
 			font-size: 12px;
 		}
+	}
+
+	.hub-item-page {
+		.item-header {
+			display: flex;
+		}
+
+		.image img{
+			width: 200px;
+			height: 200px;
+		}
+	}
+
+	.company-header {
+		display: flex;
 	}
 
 }
