--- a/erpnext/public/css/erpnext.css
+++ b/erpnext/public/css/erpnext.css
@@ -429,12 +429,36 @@ div[data-page-route="hub"] .item-card .company {
 div[data-page-route="hub"] .item-card .price {
   font-size: 12px;
 }
+div[data-page-route="hub"] .hub-item-page {
+  padding: 20px;
+}
 div[data-page-route="hub"] .hub-item-page .item-header {
   display: flex;
 }
-div[data-page-route="hub"] .hub-item-page .image img {
+div[data-page-route="hub"] .hub-item-page .item-page-image {
+  flex: 1;
+  padding: 30px;
+}
+div[data-page-route="hub"] .hub-item-page .item-page-image img {
   width: 200px;
   height: 200px;
+}
+div[data-page-route="hub"] .hub-item-page .title-content {
+  flex: 3;
+}
+div[data-page-route="hub"] .hub-item-page .title-content .description {
+  margin: 30px 0px;
+}
+div[data-page-route="hub"] .hub-item-page .title-content .actions {
+  margin-top: 30px;
+}
+div[data-page-route="hub"] .hub-item-page .title-content .actions .rfq-btn.disabled {
+  background-color: #b1bdca;
+  color: #fff;
+  border-color: #b1bdca;
+}
+div[data-page-route="hub"] .hub-item-page .company-items {
+  margin-top: 40px;
 }
 div[data-page-route="hub"] .company-header {
   display: flex;
