--- a/erpnext/public/less/hub.less
+++ b/erpnext/public/less/hub.less
@@ -49,53 +49,8 @@ div[data-page-route="hub"] {
 		padding: 15px;
 	}
 
-	.item-list-header {
-		padding-left: 5px;
-
-		h3 {
-			margin-bottom: 0px;
-			margin-top: 10px;
-			font-weight: normal;
-		}
-	}
-
-	.item-list {
-		display: flex;
-		flex-wrap: wrap;
-	}
-
-	.item-card {
-		border: 1px solid #d1d8dd;
-		border-radius: 3px;
-		margin: 5px;
-		width: 220px;
-		display: flex;
-
-		.image {
-			border-right: 1px solid #d1d8dd;
-			img {
-				height: 90px;
-				width: 90px;
-				padding: 5px;
-			}
-		}
-
-		.content {
-			padding: 10px;
-		}
-
-		.title {
-			font-weight: bold;
-		}
-
-		.company {
-			font-size: 12px;
-			margin-bottom: 12px;
-		}
-
-		.price {
-			font-size: 12px;
-		}
+	.item-list-header h3 {
+		font-weight: normal;
 	}
 
 	.hub-item-page {
@@ -135,14 +90,52 @@ div[data-page-route="hub"] {
 		.company-items {
 			margin-top: 40px;
 		}
-
-		// h2 {
-		// 	margin-top: 15px;
-		// }
 	}
 
 	.company-header {
 		display: flex;
+	}
+
+	.item-list {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.hub-item-wrapper {
+		margin-bottom: 20px;
+	}
+
+	.img-wrapper {
+		border: 1px solid @border-color;
+		border-radius: 3px;
+		padding: 12px;
+		overflow: hidden;
+		text-align: center;
+		white-space: nowrap;
+
+		img {
+			max-width: 100%;
+			max-height: 100%;
+			display: inline-block;
+			vertical-align: middle;
+		}
+
+		.helper {
+			height: 100%;
+			display: inline-block;
+			vertical-align: middle;
+		}
+
+		.standard-image {
+			font-size: 72px;
+			border: none;
+			background-color: @light-bg;
+		}
+	}
+
+	.hub-item-title {
+		width: 100%;
 	}
 
 }
