--- a/erpnext/public/less/hub.less
+++ b/erpnext/public/less/hub.less
@@ -27,6 +27,10 @@ div[data-page-route="hub"] {
 		width: 220px;
 	}
 
+	.hub-main-section {
+		padding: 30px;
+	}
+
 	// .banner {
 	// 	height: 150px;
 	// 	background-color: lightgrey;
@@ -45,28 +49,22 @@ div[data-page-route="hub"] {
 		padding: 0;
 	}
 
-	.item-list-container {
-		padding: 15px;
-	}
-
 	.item-list-header h3 {
 		font-weight: normal;
 	}
 
 	.hub-item-page {
-		padding: 20px;
+
+		h2 {
+			margin-top: 10px;
+		}
+
 		.item-header {
 			display: flex;
 		}
 
 		.item-page-image {
 			flex: 1;
-			padding: 30px;
-
-			img {
-				width: 200px;
-				height: 200px;
-			}
 		}
 
 		.title-content {
@@ -136,6 +134,12 @@ div[data-page-route="hub"] {
 
 	.hub-item-title {
 		width: 100%;
+	}
+
+	.breadcrumb {
+		padding-left: 0;
+		padding-top: 0;
+		margin-bottom: 10px;
 	}
 
 }
