--- a/erpnext/public/less/pos.less
+++ b/erpnext/public/less/pos.less
@@ -108,7 +108,8 @@
 .pos-item-wrapper {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	position: relative;
+	width: 25%;
 }
 
 .image-view-container {
