[leaderboard] filter for selecting leaderboard criteria, single col

--- a/erpnext/public/css/erpnext.css
+++ b/erpnext/public/css/erpnext.css
@@ -356,3 +356,20 @@ body[data-route="pos"] .collapse-btn {
   border-radius: 3px;
   color: #fff;
 }
+.leaderboard {
+  margin: 20px;
+  margin-right: 5px;
+}
+.leaderboard .leaderboard-list {
+  margin: 0px 20px;
+  margin-right: 35px;
+}
+.leaderboard .leaderboard-list .first {
+  padding: 10px 0px;
+}
+.leaderboard .leaderboard-list .first .list-item {
+  font-size: 16px;
+}
+.leaderboard .leaderboard-list .first a {
+  font-weight: normal;
+}
