--- a/erpnext/public/less/erpnext.less
+++ b/erpnext/public/less/erpnext.less
@@ -423,4 +423,29 @@ body[data-route="pos"] {
 	padding: 5px 9px;
 	border-radius: 3px;
 	color: #fff;
+
+}
+
+// Leaderboard
+
+.leaderboard {
+	margin: 20px;
+	margin-right: 5px;
+
+	.leaderboard-list {
+		margin: 0px 20px;
+		margin-right: 35px;
+
+		.first {
+			padding: 10px 0px;
+
+			.list-item {
+				font-size: 16px;
+			}
+
+			a {
+				font-weight: normal;
+			}
+		}
+	}
 }
