--- a/erpnext/public/less/erpnext.less
+++ b/erpnext/public/less/erpnext.less
@@ -429,23 +429,10 @@ body[data-route="pos"] {
 // Leaderboard
 
 .leaderboard {
-	margin: 20px;
-	margin-right: 5px;
-
-	.leaderboard-list {
-		margin: 0px 20px;
-		margin-right: 35px;
-
-		.first {
-			padding: 10px 0px;
-
-			.list-item {
-				font-size: 16px;
-			}
-
-			a {
-				font-weight: normal;
-			}
-		}
+	.list-item {
+		padding-left: 45px;
+	}
+	.list-item_content {
+		padding-right: 45px;
 	}
 }
