hide graph if no results

--- a/erpnext/public/css/erpnext.css
+++ b/erpnext/public/css/erpnext.css
@@ -356,6 +356,9 @@ body[data-route="pos"] .collapse-btn {
   border-radius: 3px;
   color: #fff;
 }
+.leaderboard .result {
+  border-top: 1px solid #d1d8dd;
+}
 .leaderboard .list-item {
   padding-left: 45px;
 }
