[fix] item variant ui test fixes

--- a/erpnext/public/js/templates/variant_attribute.html
+++ b/erpnext/public/js/templates/variant_attribute.html
@@ -1,4 +1,4 @@
-<h4>Item Attributes</h4>
+<h4>{{ __("Item Attributes") }}</h4>
 <table class="table table-bordered table-condensed">
 	<thead>
 		<tr>
