[new] Template Modified

--- a/erpnext/meeting_minutes/doctype/meeting/templates/meeting.html
+++ b/erpnext/meeting_minutes/doctype/meeting/templates/meeting.html
@@ -1,7 +1,7 @@
 {% extends "templates/web.html" %}
 
 
-{% block page_content %}
+{% block content %}
     <ul class="list-unstyled">
         <li>
             <label>Date:</label> {{ doc.get_formatted("date") }}
