--- a/erpnext/meeting_minutes/doctype/meeting/templates/meeting_row.html
+++ b/erpnext/meeting_minutes/doctype/meeting/templates/meeting_row.html
@@ -1,4 +1,30 @@
-<div>
-	<a href="/{{ doc.route }}">{{ title }}</a>
-</div>
-<!-- this is a sample default list template -->
+{% macro render_meetings(meetings) %}
+    {% if meetings %}
+    {{ meetings }}
+    <ul class="list-unstyled meetings-list">
+        {% for meeting in meetings %}
+        <a href="/meetings/{{ meeting.page_name }}">
+            <li>
+                {{ meeting.title }}<br>
+                <span class="text-muted">{{ frappe.format_date(meeting.date) }}: {{ meeting.from_time }} to {{ meeting.to_time }}</span>
+            </li>
+        </a>
+        {% endfor %}
+    </ul>
+
+    {% else %}
+
+    <p class="text-muted">No meetings listed</p>
+
+    {% endif %}
+{% endmacro %}
+
+<h2>Planned Meetings</h2>
+
+{{ render_meetings(planned_meetings) }}
+
+<hr>
+
+<h2>Past Meetings</h2>
+
+{{ render_meetings(past_meetings) }}
