--- a/erpnext/templates/pages/non_profit/join-chapter.html
+++ b/erpnext/templates/pages/non_profit/join-chapter.html
@@ -22,7 +22,7 @@
 			<div style="padding: 20px 0;">
 				<div class="row">
 					<div class="col-lg-8 col-md-8">
-						<form name="user-intro" action="/join-chapter" method='POST'>
+						<form name="user-intro" action="/non_profit/join-chapter" method='POST'>
 							<div class="form-group">
 								<input name="name" class="hidden form-control" type="text"
 									value="{{chapter.name}}">
