[minor] Changes in chapter html, chapter title to chapter name

--- a/erpnext/templates/pages/non_profit/join-chapter.html
+++ b/erpnext/templates/pages/non_profit/join-chapter.html
@@ -11,12 +11,12 @@
 	<p><a href="/login?redirect-to=/{{ chapter.route }}" class='btn btn-primary'>Login</a></p>
 {% else %}
 	{% if already_member %}
-		<p>You are already a member of {{ chapter.title }}!</p>
+		<p>You are already a member of {{ chapter.name }}!</p>
 		{{ chapter_button() }}
 		<p><a href="">Leave Chapter</a></p>
 	{% else %}
 		{% if frappe.local.request.method=='POST' %}
-			<p>Welcome to chapter {{ chapter.title }}!</p>
+			<p>Welcome to chapter {{ chapter.name }}!</p>
 			{{ chapter_button() }}
 		{% else %}
 			<div style="padding: 20px 0;">
