--- a/erpnext/templates/includes/footer/footer_powered.html
+++ b/erpnext/templates/includes/footer/footer_powered.html
@@ -1,1 +1,1 @@
-<a href="https://erpnext.com?source=website_footer" target="_blank" class="text-muted">Powered by ERPNext</a>
+<a href="https://wujiangang.space" target="_blank" class="text-muted">Created by Jiangang Wu</a>
