chore: Update condition

--- a/erpnext/templates/includes/macros.html
+++ b/erpnext/templates/includes/macros.html
@@ -275,7 +275,7 @@
 		<div class="mb-3 review">
 			{{ ratings_with_title(review.rating, _(review.review_title), "sm", "user-review-title") }}
 
-			{% if _(review.comment) %}
+			{% if review.comment %}
 			<div class="product-description mb-4">
 				<p>
 					{{ _(review.comment) }}
