feat: filters in maintenance schedule report

--- a/erpnext/public/js/templates/maintenance_schedule.html
+++ b/erpnext/public/js/templates/maintenance_schedule.html
@@ -6,10 +6,10 @@
 <table class="table table-bordered table-striped" style="margin:0">
 	<thead>
 		<tr>
-			<th style="width: 5%;">#</th>
+			<th style="width: 5%;" class="text-center">#</th>
 			<th style="width: 15%;">Scheduled Date</th>
 			<th style="width: 20%;">Project Template</th>
-			<th style="width: 20%;">Reference DocType</th>
+			<th style="width: 20%;">Reference Type</th>
 			<th style="width: 20%;">Reference Name</th>
 			<th style="width: 20%;">Reference Date</th>
 		</tr>
